# velox

./: .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .gersemirc  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .yamlfmt.yml  .yamllint.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODING_STYLE.md  CONTRIBUTING.md  DownloadDependency.CMakeLists.cmake.in  DownloadDependency.cmake  MANIFEST.in  Makefile  NOTICE.txt  README.md  SetupDependency.CMakeLists.cmake.in  SetupDependency.cmake  ThirdpartyToolchain.cmake  benchmark.sh  build.sh  build_2024_01_08_v1.txt  build_details_gluten_2024_03_04.txt  build_notes.md  buildlog.txt  docker-bake.hcl  docker-compose.yml  fix-compile-commands.sh  install-aws-sdk.sh  install-cmake-latest.sh  install-xsimd.sh  override.json  pyproject.toml  (+4 more)
scripts/cmake_refactor/: pyproject.toml  test.py
velox/: .clang-tidy  .gitattributes  CMakeLists.txt  complex_constants  input_vector  result_vector  sql
velox/aggregates/: CMakeLists.txt
velox/benchmarks/: AggregationBenchmarkBuilder.cpp  AggregationBenchmarkBuilder.h  CMakeLists.txt  ExpressionBenchmarkBuilder.cpp  ExpressionBenchmarkBuilder.h  QueryBenchmarkBase.cpp  QueryBenchmarkBase.h  SimpleArithmetic.cpp
velox/benchmarks_large/: TpchBenchmark.cpp
velox/buffer/: Buffer.cpp  Buffer.h  BufferPool.cpp  BufferPool.h  CMakeLists.txt  StringViewBufferHolder.cpp  StringViewBufferHolder.h
velox/codegen/: CMakeLists.txt  Codegen-Stubs.h
velox/common/: CMakeLists.txt  Casts.h  EnumDeclare.h  EnumDefine.h  Enums.h  EnumsDeclare.h  ScopedRegistry.h
velox/connectors/: CMakeLists.txt  Connector.cpp  Connector.h  ConnectorNames.h  ConnectorObjectFactory.cpp  ConnectorObjectFactory.h  ConnectorRegistry.cpp  ConnectorRegistry.h  ConnectorRegistryInternal.h  RegisterConnectorFactories.cpp  RegisterConnectorFactories.h  WriteProtocol.cpp  WriteProtocol.h
velox/core/: CMakeLists.txt  CancelPool.h  Config.cpp  Config.h  Context.cpp  CoreTypeSystem.h  ExchangeTransportType.h  ExpressionEvaluator.h  Expressions.cpp  Expressions.h  FilterToExpression.cpp  FilterToExpression.h  FixedPointPlanNodes.cpp  FixedPointPlanNodes.h  ITypedExpr.cpp  ITypedExpr.h  Metaprogramming.h  PartitionFunction.h  PlanConsistencyChecker.cpp  PlanConsistencyChecker.h  PlanFragment.cpp  PlanFragment.h  PlanNode.cpp  PlanNode.h  QueryConfig.cpp  QueryConfig.h  QueryConfigProvider.cpp  QueryConfigProvider.h  QueryCtx.cpp  QueryCtx.h  ScalarFunction.h  ScanBatchEvent.h  SimpleFunctionMetadata.cpp  SimpleFunctionMetadata.h  TableWriteTraits.cpp  TableWriteTraits.h  VectorUtil.cpp  VectorUtil.h  WindowFunction.cpp  WindowFunction.h
velox/cudf-binop-scalar-repro/: CMakeLists.txt  PLAN-CUDF-UPSTREAM-FIX.md  PLAN-VELOX-WORKAROUND.md  README.md  cursor_contents_of_vcdet_log6.md  main.cpp
velox/docs/: Makefile  README.md  TpchBenchmark.rst  affiliations_map.txt  bindings.rst  conf.py  configs.html  configs.rst  credits.py  develop.rst  functions.rst  iceberg_functions.rst  index.rst  metrics.rst  monthly-updates.rst  presto_functions.rst  spark_functions.rst  velox-in-10-min.rst
velox/duckdb/: CMakeLists.txt  README.md
velox/dwio/: CMakeLists.txt  RegisterReaders.cpp  RegisterReaders.h  RegisterWriters.cpp  RegisterWriters.h
velox/examples/: ASANTest.cpp  CMakeLists.txt  ExpressionEval.cpp  HashStringAllocatorCompaction.cpp  OpaqueType.cpp  OperatorExtensibility.cpp  ScanAndSort.cpp  ScanFile.cpp  ScanOrc.cpp  SimpleFunctions.cpp  SimpleQuery.cpp  VectorReaderWriter.cpp
velox/exec/: AdaptivePrefetch.h  AddressableNonNullValueList.cpp  AddressableNonNullValueList.h  Aggregate.cpp  Aggregate.h  AggregateCompanionAdapter.cpp  AggregateCompanionAdapter.h  AggregateCompanionSignatures.cpp  AggregateCompanionSignatures.h  AggregateFunctionAdapter.h  AggregateFunctionAdapterUtil.cpp  AggregateFunctionAdapterUtil.h  AggregateFunctionRegistry.cpp  AggregateFunctionRegistry.h  AggregateInfo.cpp  AggregateInfo.h  AggregateUtil.cpp  AggregateUtil.h  AggregateWindow.cpp  AggregateWindow.h  AggregationHook.h  AggregationMasks.cpp  AggregationMasks.h  ArrowStream.cpp  ArrowStream.h  AssignUniqueId.cpp  AssignUniqueId.h  BarrierSplit.h  BatchExchange.cpp  BatchExchange.h  BatchPartitionedDestination.cpp  BatchPartitionedDestination.h  BatchShuffleFactory.h  BlockingReason.cpp  BlockingReason.h  CMakeLists.txt  CallbackSink.cpp  CallbackSink.h  ColumnStatsCollector.cpp  ColumnStatsCollector.h  (+316 more)
velox/expression/: Aggregate.cpp  BooleanMix.cpp  BooleanMix.h  CMakeLists.txt  CaseExpr.cpp  CaseExpr.h  CastExpr-inl.h  CastExpr.cpp  CastExpr.h  CastHooks.cpp  CastHooks.h  CastKernel.h  CastTypeChecker.h  CoalesceExpr.cpp  CoalesceExpr.h  CoalesceRewrite.cpp  CoalesceRewrite.h  ComplexProxyTypes.h  ComplexViewTypes.h  ComplexWriterTypes.h  ConjunctExpr.cpp  ConjunctExpr.h  ConjunctRewrite.cpp  ConjunctRewrite.h  ConstantExpr.cpp  ConstantExpr.h  ControlExpr.cpp  ControlExpr.h  DecodedArgs.h  DynamicLibraryLoader.cpp  DynamicLibraryLoader.h  EvalCtx.cpp  EvalCtx.h  Expr.cpp  Expr.h  ExprCompiler.cpp  ExprCompiler.h  ExprConstants.h  ExprOptimizer.cpp  ExprOptimizer.h  (+76 more)
velox/flag_definitions/: CMakeLists.txt  flags.cpp  flags.h
velox/functions/: CMakeLists.txt  CoverageUtil.cpp  CoverageUtil.h  FunctionRegistry.cpp  FunctionRegistry.h  Macros.h  README.md  Registerer.h  UDFOutputString.h  Udf.h
velox/jni/: CMakeLists.txt
velox/optimizer/: ArenaCache.h  CMakeLists.txt  Cost.cpp  Cost.h  Filters.cpp  Filters.h  Plan.cpp  Plan.h  PlanObject.cpp  PlanObject.h  PlanUtils.cpp  PlanUtils.h  QueryGraph.cpp  QueryGraph.h  QueryGraphContext.cpp  QueryGraphContext.h  RelationOp.cpp  RelationOp.h  Schema.cpp  Schema.h  ToGraph.cpp  ToVelox.cpp  VeloxHistory.cpp  VeloxHistory.h
velox/parse/: CMakeLists.txt  DuckLogicalOperator.h  ExprRewriter.cpp  ExprRewriter.h  Expressions.cpp  Expressions.h  ExpressionsParser.cpp  ExpressionsParser.h  IExpr.h  PlanNodeIdGenerator.h  QueryPlanner.cpp  QueryPlanner.h  SqlExpressionsParser.cpp  SqlExpressionsParser.h  SqlReservedWords.h  TypeResolver.cpp  TypeResolver.h
(+8353 files in other folders)
